clusters/main/kubernetes/system/networkpolicies/app/kube-system-metrics-server-scoped.cnp.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: metrics-server-scoped-node-and-apiserver-paths
  namespace: kube-system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: metrics-server
      app.kubernetes.io/name: metrics-server
  ingress:
    - fromEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "10250"
              protocol: TCP
  egress:
    - toEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "10250"
              protocol: TCP
            - port: "443"
              protocol: TCP
            - port: "6443"
              protocol: TCP
